# duckdb-cudasp-extension

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
scripts/: compute_bip352_expected.py  compute_correct_label_test_value.py  compute_expected_result.py  compute_gecc_expected.py  compute_output_from_x.py  convert_bip352_test_vector.py  decode_height400_data.py  decode_test_blobs.py  decompress_tweak_key.py  generate_test_vectors.py  parse_test_blobs.py  prepare_label_test.py  prepare_label_test2.py  test_false_case.sql  verify_bip352_from_test.py  verify_bip352_test_vector.py  verify_label_test.py  verify_tagged_hash.py  verify_which_case_matches.py
src/: cudasp_extension.cpp  cudasp_extension.cu  cudasp_gpu.cu
src/include/: cudasp_extension.hpp
test/sql/: cudasp.test
